<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- Project information ======================================================================================= -->
    <groupId>com.oakinvest.kiso</groupId>
    <artifactId>kiso</artifactId>
    <version>0.1.3-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Kiso</name>
    <description>Publishing engine for the Open Knowledge Format</description>
    <url>https://github.com/oak-invest/kiso</url>
    <licenses>
        <license>
            <name>Apache License v2.0</name>
            <url>https://github.com/oak-invest/kiso?tab=Apache-2.0-1-ov-file</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <!-- Source Code Management ==================================================================================== -->
    <scm>
        <url>https://github.com/oak-invest/kiso</url>
        <connection>scm:git:git://github.com/oak-invest/kiso.git</connection>
        <developerConnection>scm:git:git@github.com:oak-invest/kiso.git</developerConnection>
    </scm>

    <!-- Issue management ========================================================================================== -->
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/oak-invest/kiso/issues</url>
    </issueManagement>

    <!-- Modules =================================================================================================== -->
    <modules>
        <module>libraries/kiso-core</module>
        <module>applications/kiso-cli</module>
    </modules>

    <!-- Project configuration ===================================================================================== -->
    <properties>
        <!-- Java build configuration -->
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Main libraries -->
        <commonmark.version>0.29.0</commonmark.version>
        <jte.version>3.2.4</jte.version>
        <picocli.version>4.7.7</picocli.version>

        <!-- Boilerplate and utils -->
        <jspecify.version>1.0.0</jspecify.version>
        <lombok.version>1.18.46</lombok.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-io.version>2.22.0</commons-io.version>
        <commons-text.version>1.15.0</commons-text.version>

        <!-- Test dependencies -->
        <junit-jupiter.version>6.1.1</junit-jupiter.version>
        <junit-pionner.version>2.3.0</junit-pionner.version>
        <assertj.version>3.27.7</assertj.version>
        <jsoup.version>1.22.2</jsoup.version>

        <!-- Maven -->
        <maven.checkstyle.plugin.version>3.6.0</maven.checkstyle.plugin.version>
        <maven.puppycrawl.checkstyle.version>13.7.0</maven.puppycrawl.checkstyle.version>
        <maven.resources.plugin.version>3.5.0</maven.resources.plugin.version>
        <maven.compiler.plugin.version>3.15.0</maven.compiler.plugin.version>
        <maven.surefire.plugin.version>3.5.6</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>3.5.5</maven.failsafe.plugin.version>
        <maven.surefire-junit5-tree-reporter.plugin.version>1.5.1</maven.surefire-junit5-tree-reporter.plugin.version>
        <maven.jar.plugin.version>3.5.0</maven.jar.plugin.version>
        <maven.source.plugin.version>3.4.0</maven.source.plugin.version>
        <maven.javadoc.plugin.version>3.12.0</maven.javadoc.plugin.version>
        <maven.exec.plugin.version>3.6.3</maven.exec.plugin.version>
        <maven.graalvm.native.plugin.version>1.1.3</maven.graalvm.native.plugin.version>
        <maven.gitflow-maven-plugin.version>1.21.0</maven.gitflow-maven-plugin.version>
    </properties>

    <!-- Dependency versions ======================================================================================= -->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.oakinvest.kiso</groupId>
                <artifactId>kiso-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark</artifactId>
                <version>${commonmark.version}</version>
            </dependency>
            <dependency>
                <groupId>org.commonmark</groupId>
                <artifactId>commonmark-ext-autolink</artifactId>
                <version>${commonmark.version}</version>
            </dependency>
            <dependency>
                <groupId>gg.jte</groupId>
                <artifactId>jte</artifactId>
                <version>${jte.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-codegen</artifactId>
                <version>${picocli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>${jspecify.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>${commons-text.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit-pioneer</groupId>
                <artifactId>junit-pioneer</artifactId>
                <version>${junit-pionner.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- Build configuration ======================================================================================= -->
    <build>
        <plugins>
            <!-- Compiler ========================================================================================== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <proc>full</proc>
                </configuration>
            </plugin>

            <!-- Tests ============================================================================================== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
            </plugin>

            <!-- Checkstyle ======================================================================================== -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven.checkstyle.plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${maven.puppycrawl.checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <consoleOutput>true</consoleOutput>
                    <configLocation>https://oak-invest.github.io/kiso/shared/checkstyle.xml</configLocation>
                    <failOnViolation>true</failOnViolation>
                    <violationSeverity>warning</violationSeverity>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>${maven.gitflow-maven-plugin.version}</version>
                <configuration>
                    <skipTestProject>true</skipTestProject>
                    <gitFlowConfig>
                        <productionBranch>production</productionBranch>
                        <developmentBranch>development</developmentBranch>
                        <versionTagPrefix>v</versionTagPrefix>
                    </gitFlowConfig>
                    <commitMessages>
                        <featureStartMessage>Update versions for feature branch</featureStartMessage>
                        <featureFinishMessage>Update versions for development branch</featureFinishMessage>
                        <hotfixStartMessage>Update versions for hotfix</hotfixStartMessage>
                        <hotfixFinishMessage>Update for next development version</hotfixFinishMessage>
                        <releaseStartMessage>Update versions for release</releaseStartMessage>
                        <releaseFinishMessage>Update for next development version</releaseFinishMessage>
                        <tagHotfixMessage>Tag hotfix</tagHotfixMessage>
                        <tagReleaseMessage>Tag release</tagReleaseMessage>
                    </commitMessages>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
